# Detect-Track

./: .gitignore  README.md
STAPLE/src/: fhog.h  staple_tracker.cpp
TM_track/: CMakeLists.txt  main.cpp
beifen/: main.cpp
cascade_TM/src/: main.cpp
cascade_TM_judge_color/src/: main.cpp  main.cpp~  serial.cpp
cascade_staple/src/: main.cpp  staple_tracker.cpp
cascade_staple_cnn/src/: main.cpp  predict_car.h
color_detect/: CMakeLists.txt  ColorDetect.h  fuck  main.cpp  serial.cpp  serial.h
detect_fast/: CMakeLists.txt  main.cpp
my_staple/src/: main.cpp
serial/src/: main.cpp  serial.h  template.h
serial_linux/src/: main.cpp  serial.cpp
serial_windows/src/: main.cpp
staple_track/src/: main.cpp
track_opencv/: CMakeLists.txt
track_opencv/src/: tracker.cpp
yolo_KCF/src/: main.cpp  utils.h  yolo_v2_class.hpp
yolo_TM/: CMakeLists.txt
yolo_TM/src/: main.cpp  template.h  utils.h  yolo_v2_class.hpp
